@@ -297,6 +297,10 @@ static const char* Copyright = "(C) Copyright Michigan State University 2008, Al
 /*
   Change Log:
   $Log$
+  Revision 5.1.2.4  2005/05/19 10:36:34  thoagland
+  Added support for mask equals gates
+
+
   Revision 5.1.2.3  2005/04/16 20:09:47  ron-fox
   Add treeparameter initialization.
 
@@ -333,6 +337,8 @@ static const char* Copyright = "(C) Copyright Michigan State University 2008, Al
 #include <GammaCut.h>
 #include <GammaBand.h>
 #include <GammaContour.h>
+#include <MaskGates.h>
+#include <MaskEqualGate.h>
 
 #include <GateFactory.h>
 
@@ -483,6 +489,7 @@ CGatePackage::AddGate(CTCLResult& rResult, const std::string& rGateName,
                   - True,
                   - False,
                   - Deleted     {}
+		  - em {parameter string}
   
  */
 CTCLString CGatePackage::ListGates()  
@@ -847,7 +854,22 @@ std::string CGatePackage::GateToString(CGateContainer* pGate)
     }
     Result.EndSublist();
   }
-  
+
+  else if ( type == "em") {
+    CMaskEqualGate& rEqual((CMaskEqualGate&)*rGate);  
+    UInt_t nPid = rEqual.getId();
+    CParameter* Param = m_pHistogrammer->FindParameter(nPid);
+    if(Param) {
+      Result.AppendElement(Param->getName());
+    }
+    else {
+      Result.AppendElement("-Deleted Parameter-");
+    }    
+    long value = rEqual.getCompare();
+    Result.AppendElement(value ,"%#X");
+    Result.EndSublist();
+    return Result;
+  }
 
   else if ((type == "gs") ||
 	   (type == "gb") ||
