@@ -303,3 +303,5 @@ May 18, 2005
   - Add support for CTCLString::AppendElement(DFloat_t, const char* format)
     use it in parameter package's  parameter list of mapped parameters
     as a test.
+  - Add support for CTCLString::AppendElement(long, const char* format)
+  - Add support for mask equals gates as well define the mask gate base class.
